cxgb4: Issue mbox commands on correct mbox (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16505,6 +16505,7 @@
 	patches.drivers/cxgb4-0194-cxgb4-Fix-T5-adapter-accessing-T4-adapter-registers.patch
 	patches.drivers/cxgb4-0195-cxgb4-Detect-and-display-firmware-reported-errors.patch
 	patches.drivers/cxgb4-0196-cxgb4-Avoid-dumping-Write-only-registers-in-register.patch
+	patches.drivers/cxgb4-0197-cxgb4-Issue-mbox-commands-on-correct-mbox.patch
 
 	########################################################
 	# Wireless Networking
