--- a/series.conf
+++ b/series.conf
@@ -16435,6 +16435,7 @@
 	patches.drivers/cxgb4-0124-RDMA-cxgb4-Drop-RX_DATA-packets-if-the-endpoint-is-g.patch
 	patches.drivers/cxgb4-0125-RDMA-cxgb4-rx_data-needs-to-hold-the-ep-mutex.patch
 	patches.drivers/cxgb4-0126-RDMA-cxgb4-Disable-DSGL-use-by-default.patch
+	patches.drivers/cxgb4-0127-RDMA-cxgb4-Use-the-BAR2-WC-path-for-kernel-QPs-and-T.patch
 
 	########################################################
 	# Wireless Networking
