--- a/series.conf
+++ b/series.conf
@@ -16366,6 +16366,7 @@
 	patches.drivers/cxgb4-0055-RDMA-cxgb4-Handle-newer-firmware-changes.patch
 	patches.drivers/cxgb4-0056-RDMA-cxgb4-Fix-QP-flush-logic.patch
 	patches.drivers/cxgb4-0057-RDMA-cxgb4-Fix-accounting-for-unsignaled-SQ-WRs-to-d.patch
+	patches.drivers/cxgb4-0058-RDMA-cxgb4-Set-arp-error-handler-for-PASS_ACCEPT_RPL.patch
 
 	########################################################
 	# Wireless Networking
