cxgb4: use dev_port to identify ports (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16468,6 +16468,7 @@
 	patches.drivers/cxgb4-0157-cxgb4-Fix-endian-bug-introduced-in-cxgb4-dcb-patchse.patch
 	patches.drivers/cxgb4-0158-cxgb4-Not-need-to-hold-the-adap_rcu_lock-lock-when-r.patch
 	patches.fixes/net-Add-sysfs-file-for-port-number.patch
+	patches.drivers/cxgb4-0160-cxgb4-use-dev_port-to-identify-ports.patch
 
 	########################################################
 	# Wireless Networking
