--- a/series.conf
+++ b/series.conf
@@ -16496,6 +16496,7 @@
 	patches.drivers/cxgb4-0185-cxgb4-Disable-recursive-mailbox-commands-when-enabli.patch
 	patches.drivers/cxgb4-0186-cxgb4-Fix-for-SR-IOV-VF-initialization.patch
 	patches.drivers/cxgb4-0187-cxgb4-Update-FW-version-string-to-match-FW-binary-ve.patch
+	patches.drivers/cxgb4-0188-cxgb4-IEEE-fixes-for-DCBx-state-machine.patch
 
 	########################################################
 	# Wireless Networking
