--- a/series.conf
+++ b/series.conf
@@ -16345,6 +16345,7 @@
 	patches.drivers/cxgb4-0034-cxgb4-Update-driver-version-and-description.patch
 	patches.drivers/cxgb4-0035-cxgb4-Disable-SR-IOV-support-for-PF4-7-for-T5.patch
 	patches.drivers/cxgb4-0036-RDMA-cxgb4-Add-Support-for-Chelsio-T5-adapter.patch
+	patches.drivers/cxgb4-0037-RDMA-cxgb4-Turn-off-db-coalescing-when-RDMA-QPs-are-.patch
 
 	########################################################
 	# Wireless Networking
