RDMA/cxgb4: Update snd_seq when sending MPA messages (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16426,6 +16426,7 @@
 	patches.drivers/cxgb4-0115-RDMA-cxgb4-Fix-possible-memory-leak-in-RX_PKT-proces.patch
 	patches.drivers/cxgb4-0116-RDMA-cxgb4-Ignore-read-reponse-type-1-CQEs.patch
 	patches.drivers/cxgb4-0117-RDMA-cxgb4-Connect_request_upcall-fixes.patch
+	patches.drivers/cxgb4-0118-RDMA-cxgb4-Update-snd_seq-when-sending-MPA-messages.patch
 
 	########################################################
 	# Wireless Networking
