RDMA/cxgb4: Fix cast warning (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16332,6 +16332,7 @@
 	patches.drivers/cxgb4-0021-RDMA-cxgb4-Insert-hwtid-in-pass_accept_req-instead-i.patch
 	patches.drivers/cxgb4-0022-RDMA-cxgb4-Address-sparse-warnings.patch
 	patches.drivers/cxgb4-0023-RDMA-cxgb4-cookie-can-stay-in-host-endianness.patch
+	patches.drivers/cxgb4-0024-RDMA-cxgb4-Fix-cast-warning.patch
 
 	########################################################
 	# Wireless Networking
