--- a/series.conf
+++ b/series.conf
@@ -16526,6 +16526,7 @@
 	patches.drivers/cxgb4-0215-cxgb4-Fix-build-failure-in-cxgb4-when-ipv6-is-disabl.patch
 	patches.drivers/cxgb4-0216-cxgb4-Improve-handling-of-DCB-negotiation-or-loss-th.patch
 	patches.drivers/cxgb4-0217-cxgb4-Handle-dcb-enable-correctly.patch
+	patches.drivers/cxgb4-0218-cxgb4-Fix-missing-initialization-of-win0_lock.patch
 
 	########################################################
 	# Wireless Networking
