cxgb4/cxgb4vf: Updated the LSO transfer length in CPL_TX_PKT_LSO for T5 (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16518,6 +16518,7 @@
 	patches.drivers/cxgb4-0207-cxgb4-Add-support-for-adaptive-rx.patch
 	patches.drivers/cxgb4-0208-cxgb4-potential-shift-wrapping-bug.patch
 	patches.drivers/cxgb4-0209-cxgb4-clean-up-a-type-issue.patch
+	patches.drivers/cxgb4-0210-cxgb4-cxgb4vf-Updated-the-LSO-transfer-length-in-CPL.patch
 
 	########################################################
 	# Wireless Networking
