--- a/series.conf
+++ b/series.conf
@@ -16521,6 +16521,7 @@
 	patches.drivers/cxgb4-0210-cxgb4-cxgb4vf-Updated-the-LSO-transfer-length-in-CPL.patch
 	patches.drivers/cxgb4-0211-cxgb4-Wait-for-device-to-get-ready-before-reading-an.patch
 	patches.drivers/cxgb4-0212-RDMA-cxgb4-Make-c4iw_wr_log_size_order-static.patch
+	patches.drivers/cxgb4-0213-cxgb4-Fix-FW-flash-logic-using-ethtool.patch
 
 	########################################################
 	# Wireless Networking
