--- a/series.conf
+++ b/series.conf
@@ -16524,6 +16524,7 @@
 	patches.drivers/cxgb4-0213-cxgb4-Fix-FW-flash-logic-using-ethtool.patch
 	patches.drivers/cxgb4-0214-cxgb4-Update-Kconfig-to-include-Chelsio-T5-adapter.patch
 	patches.drivers/cxgb4-0215-cxgb4-Fix-build-failure-in-cxgb4-when-ipv6-is-disabl.patch
+	patches.drivers/cxgb4-0216-cxgb4-Improve-handling-of-DCB-negotiation-or-loss-th.patch
 
 	########################################################
 	# Wireless Networking
