--- a/series.conf
+++ b/series.conf
@@ -16484,6 +16484,7 @@
 	patches.drivers/cxgb4-0173-cxgb4-iw_cxgb4-Move-common-defines-to-cxgb4.patch
 	patches.drivers/cxgb4-0174-cxgb4-Export-symbols-required-by-cxgb4i-for-ipv6-sup.patch
 	patches.drivers/cxgb4-0175-iw_cxgb4-fix-for-64-bit-integer-division.patch
+	patches.fixes/include-linux-math64.h-add-div64_ul.patch
 
 	########################################################
 	# Wireless Networking
