cxgb4: Fix for SR-IOV VF initialization (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16494,6 +16494,7 @@
 	patches.drivers/cxgb4-0183-RDMA-cxgb4-Only-call-CQ-completion-handler-if-it-is-.patch
 	patches.drivers/cxgb4-0184-cxgb4-only-free-allocated-fls.patch
 	patches.drivers/cxgb4-0185-cxgb4-Disable-recursive-mailbox-commands-when-enabli.patch
+	patches.drivers/cxgb4-0186-cxgb4-Fix-for-SR-IOV-VF-initialization.patch
 
 	########################################################
 	# Wireless Networking
