--- a/series.conf
+++ b/series.conf
@@ -16382,6 +16382,7 @@
 	patches.drivers/cxgb4-0071-net-cxgb4-calls-skb_set_hash.patch
 	patches.drivers/cxgb4-0072-cxgb4-Reserve-stid-0-for-T4-T5-adapters.patch
 	patches.drivers/cxgb4-0073-cxgb4-Include-TCP-as-protocol-when-creating-server-f.patch
+	patches.drivers/cxgb4-0074-cxgb4-Assign-filter-server-TIDs-properly.patch
 
 	########################################################
 	# Wireless Networking
