cxgb4: Initialize T5 (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16336,6 +16336,7 @@
 	patches.drivers/cxgb4-0025-cxgb4-Allow-for-backward-compatibility-with-new-VPD-.patch
 	patches.drivers/cxgb4-0026-cxgb4-Add-register-definations-for-T5.patch
 	patches.drivers/cxgb4-0027-cxgb4-Add-macros-structures-and-inline-functions-for.patch
+	patches.drivers/cxgb4-0028-cxgb4-Initialize-T5.patch
 
 	########################################################
 	# Wireless Networking
