--- a/series.conf
+++ b/series.conf
@@ -16378,6 +16378,7 @@
 	patches.drivers/cxgb4-0067-cxgb4-Much-cleaner-implementation-of-is_t4-is_t5.patch
 	patches.drivers/cxgb4-0068-cxgb4vf-added-much-cleaner-implementation-of-is_t4.patch
 	patches.drivers/cxgb4-0069-cxgb4-Add-new-scheme-to-update-T4-T5-firmware.patch
+	patches.drivers/cxgb4-0070-RDMA-cxgb4-Make-_c4iw_write_mem_dma-static.patch
 
 	########################################################
 	# Wireless Networking
