cxgb4: clean up a type issue (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16517,6 +16517,7 @@
 	patches.drivers/cxgb4-0206-cxgb4-cxgb4vf-Add-Devicde-ID-for-two-more-adapter.patch
 	patches.drivers/cxgb4-0207-cxgb4-Add-support-for-adaptive-rx.patch
 	patches.drivers/cxgb4-0208-cxgb4-potential-shift-wrapping-bug.patch
+	patches.drivers/cxgb4-0209-cxgb4-clean-up-a-type-issue.patch
 
 	########################################################
 	# Wireless Networking
