--- a/series.conf
+++ b/series.conf
@@ -16502,6 +16502,7 @@
 	patches.drivers/cxgb4-0191-cxgb4-Free-completed-tx-skbs-promptly.patch
 	patches.drivers/cxgb4-0192-cxgb4-Fix-for-handling-1Gb-s-SFP-Transceiver-Modules.patch
 	patches.drivers/cxgb4-0193-cxgb4-Fixed-the-code-to-use-correct-length-for-part-.patch
+	patches.drivers/cxgb4-0194-cxgb4-Fix-T5-adapter-accessing-T4-adapter-registers.patch
 
 	########################################################
 	# Wireless Networking
