--- a/series.conf
+++ b/series.conf
@@ -16335,6 +16335,7 @@
 	patches.drivers/cxgb4-0024-RDMA-cxgb4-Fix-cast-warning.patch
 	patches.drivers/cxgb4-0025-cxgb4-Allow-for-backward-compatibility-with-new-VPD-.patch
 	patches.drivers/cxgb4-0026-cxgb4-Add-register-definations-for-T5.patch
+	patches.drivers/cxgb4-0027-cxgb4-Add-macros-structures-and-inline-functions-for.patch
 
 	########################################################
 	# Wireless Networking
