RDMA/cxgb4: Make c4iw_wr_log_size_order static (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16520,6 +16520,7 @@
 	patches.drivers/cxgb4-0209-cxgb4-clean-up-a-type-issue.patch
 	patches.drivers/cxgb4-0210-cxgb4-cxgb4vf-Updated-the-LSO-transfer-length-in-CPL.patch
 	patches.drivers/cxgb4-0211-cxgb4-Wait-for-device-to-get-ready-before-reading-an.patch
+	patches.drivers/cxgb4-0212-RDMA-cxgb4-Make-c4iw_wr_log_size_order-static.patch
 
 	########################################################
 	# Wireless Networking
