PCI: Remove DEFINE_PCI_DEVICE_TABLE macro use (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16497,6 +16497,7 @@
 	patches.drivers/cxgb4-0186-cxgb4-Fix-for-SR-IOV-VF-initialization.patch
 	patches.drivers/cxgb4-0187-cxgb4-Update-FW-version-string-to-match-FW-binary-ve.patch
 	patches.drivers/cxgb4-0188-cxgb4-IEEE-fixes-for-DCBx-state-machine.patch
+	patches.drivers/cxgb4-0189-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 
 	########################################################
 	# Wireless Networking
