cxgb4 : Fix bug in DCB app deletion (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16528,6 +16528,7 @@
 	patches.drivers/cxgb4-0217-cxgb4-Handle-dcb-enable-correctly.patch
 	patches.drivers/cxgb4-0218-cxgb4-Fix-missing-initialization-of-win0_lock.patch
 	patches.drivers/cxgb4-0219-cxgb4-cxgb4vf-For-T5-use-Packing-and-Padding-Boundar.patch
+	patches.drivers/cxgb4-0220-cxgb4-Fix-bug-in-DCB-app-deletion.patch
 
 	########################################################
 	# Wireless Networking
