RDMA/cxgb4: Map pbl buffers for dma if using DSGL (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16348,6 +16348,7 @@
 	patches.drivers/cxgb4-0037-RDMA-cxgb4-Turn-off-db-coalescing-when-RDMA-QPs-are-.patch
 	patches.drivers/cxgb4-0038-RDMA-cxgb4-Add-module_params-to-enable-DB-FC-Coalesc.patch
 	patches.drivers/cxgb4-0039-RDMA-cxgb4-Use-DSGLs-for-fastreg-and-adapter-memory-.patch
+	patches.drivers/cxgb4-0040-RDMA-cxgb4-Map-pbl-buffers-for-dma-if-using-DSGL.patch
 
 	########################################################
 	# Wireless Networking
