--- a/series.conf
+++ b/series.conf
@@ -16341,6 +16341,7 @@
 	patches.drivers/cxgb4-0030-cxgb4-Add-T5-write-combining-support.patch
 	patches.drivers/cxgb4-0031-cxgb4-Enable-doorbell-drop-recovery-only-for-T4-adap.patch
 	patches.drivers/cxgb4-0032-cxgb4-Add-T5-debugfs-support.patch
+	patches.drivers/cxgb4-0033-cxgb4-Add-T5-PCI-ids.patch
 
 	########################################################
 	# Wireless Networking
