--- a/series.conf
+++ b/series.conf
@@ -16312,6 +16312,7 @@
 	patches.drivers/cxgb4-0001-RDMA-cxgb4-use-WARN.patch
 	patches.drivers/cxgb4-0002-cxgb4-cxgb4vf-Chelsio-FCoE-offload-driver-submission.patch
 	patches.drivers/cxgb4-0003-cxgb4-remove-__dev-attributes.patch
+	patches.drivers/cxgb4-0004-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
 
 	########################################################
 	# Wireless Networking
