--- a/series.conf
+++ b/series.conf
@@ -16446,6 +16446,7 @@
 	patches.drivers/cxgb4-0135-RDMA-cxgb4-Use-uninitialized_var.patch
 	patches.drivers/cxgb4-0136-RDMA-cxgb4-Fix-over-dereference-when-terminating.patch
 	patches.drivers/cxgb4-0137-cxgb4-Save-the-correct-mac-addr-for-hw-loopback-conn.patch
+	patches.drivers/cxgb4-0138-cxgb4-use-the-correct-max-size-for-firmware-flash.patch
 
 	########################################################
 	# Wireless Networking
