--- a/series.conf
+++ b/series.conf
@@ -16506,6 +16506,7 @@
 	patches.drivers/cxgb4-0195-cxgb4-Detect-and-display-firmware-reported-errors.patch
 	patches.drivers/cxgb4-0196-cxgb4-Avoid-dumping-Write-only-registers-in-register.patch
 	patches.drivers/cxgb4-0197-cxgb4-Issue-mbox-commands-on-correct-mbox.patch
+	patches.drivers/cxgb4-0198-cxgb4-remove-bond-lock.patch
 
 	########################################################
 	# Wireless Networking
