cxgb4: Enable doorbell drop recovery only for T4 adapter (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16339,6 +16339,7 @@
 	patches.drivers/cxgb4-0028-cxgb4-Initialize-T5.patch
 	patches.drivers/cxgb4-0029-cxgb4-Dump-T5-registers.patch
 	patches.drivers/cxgb4-0030-cxgb4-Add-T5-write-combining-support.patch
+	patches.drivers/cxgb4-0031-cxgb4-Enable-doorbell-drop-recovery-only-for-T4-adap.patch
 
 	########################################################
 	# Wireless Networking
