RDMA/cxgb4: Fix stack info leak in c4iw_create_qp() (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16359,6 +16359,7 @@
 	patches.drivers/cxgb4-0048-cxgb4-Force-uninitialized-state-if-FW_ON_ADAPTER-is-.patch
 	patches.drivers/cxgb4-0049-cxgb3-Correct-comparisons-and-calculations-using-skb.patch
 	patches.drivers/cxgb4-0050-cxgb4-Do-not-set-net_device-dev_id-to-VI-index.patch
+	patches.drivers/cxgb4-0051-RDMA-cxgb4-Fix-stack-info-leak-in-c4iw_create_qp.patch
 
 	########################################################
 	# Wireless Networking
