cxgb4: Allow for backward compatibility with new VPD scheme (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16333,6 +16333,7 @@
 	patches.drivers/cxgb4-0022-RDMA-cxgb4-Address-sparse-warnings.patch
 	patches.drivers/cxgb4-0023-RDMA-cxgb4-cookie-can-stay-in-host-endianness.patch
 	patches.drivers/cxgb4-0024-RDMA-cxgb4-Fix-cast-warning.patch
+	patches.drivers/cxgb4-0025-cxgb4-Allow-for-backward-compatibility-with-new-VPD-.patch
 
 	########################################################
 	# Wireless Networking
