cxgb4: Decode PCIe Gen3 link speed (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16451,6 +16451,7 @@
 	patches.drivers/cxgb4-0140-RDMA-cxgb4-Force-T5-connections-to-use-TAHOE-congest.patch
 	patches.drivers/cxgb4-0141-RDMA-cxgb4-Only-allow-kernel-db-ringing-for-T4-devs.patch
 	patches.drivers/cxgb4-0142-RDMA-cxgb4-Update-Kconfig-to-include-Chelsio-T5-adap.patch
+	patches.drivers/cxgb4-0143-cxgb4-Decode-PCIe-Gen3-link-speed.patch
 
 	########################################################
 	# Wireless Networking
