--- a/series.conf
+++ b/series.conf
@@ -16408,6 +16408,7 @@
 	patches.drivers/cxgb4-0097-cgxb4-Stop-using-ethtool-SPEED_-constants.patch
 	patches.drivers/cxgb4-0098-net-cxgb4-use-remove-handler-as-shutdown-handler.patch
 	patches.drivers/cxgb4-0099-cxgb4-Fix-some-small-bugs-in-t4_sge_init_soft-when-o.patch
+	patches.drivers/cxgb4-0100-cxgb4-Add-code-to-dump-SGE-registers-when-hitting-id.patch
 
 	########################################################
 	# Wireless Networking
