cxgb4: Adds device ID for few more Chelsio T4 Adapters (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16472,6 +16472,7 @@
 	patches.drivers/cxgb4-0161-rdma-cxgb4-Fixes-cxgb4-probe-failure-in-VM-when-PF-i.patch
 	patches.drivers/cxgb4-0162-cxgb4-Use-FW-interface-to-get-BAR0-value.patch
 	patches.drivers/cxgb4-0163-cxgb4-Replaced-the-backdoor-mechanism-to-access-the-.patch
+	patches.drivers/cxgb4-0164-cxgb4-Adds-device-ID-for-few-more-Chelsio-T4-Adapter.patch
 
 	########################################################
 	# Wireless Networking
