RDMA/cxgb4: Max fastreg depth depends on DSGL support (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16439,6 +16439,7 @@
 	patches.drivers/cxgb4-0128-RDMA-cxgb4-Endpoint-timeout-fixes.patch
 	patches.drivers/cxgb4-0129-RDMA-cxgb4-rmb-after-reading-valid-gen-bit.patch
 	patches.drivers/cxgb4-0130-RDMA-cxgb4-SQ-flush-fix.patch
+	patches.drivers/cxgb4-0131-RDMA-cxgb4-Max-fastreg-depth-depends-on-DSGL-support.patch
 
 	########################################################
 	# Wireless Networking
