cxgb4: Do not set net_device::dev_id to VI index (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16358,6 +16358,7 @@
 	patches.drivers/cxgb4-0047-cxgb4vf-Support-CPL_SGE_EGR_UPDATEs-encapsulated-in-.patch
 	patches.drivers/cxgb4-0048-cxgb4-Force-uninitialized-state-if-FW_ON_ADAPTER-is-.patch
 	patches.drivers/cxgb4-0049-cxgb3-Correct-comparisons-and-calculations-using-skb.patch
+	patches.drivers/cxgb4-0050-cxgb4-Do-not-set-net_device-dev_id-to-VI-index.patch
 
 	########################################################
 	# Wireless Networking
