RDMA/cxgb4: Bump tcam_full stat and WR reply timeout (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16349,6 +16349,7 @@
 	patches.drivers/cxgb4-0038-RDMA-cxgb4-Add-module_params-to-enable-DB-FC-Coalesc.patch
 	patches.drivers/cxgb4-0039-RDMA-cxgb4-Use-DSGLs-for-fastreg-and-adapter-memory-.patch
 	patches.drivers/cxgb4-0040-RDMA-cxgb4-Map-pbl-buffers-for-dma-if-using-DSGL.patch
+	patches.drivers/cxgb4-0041-RDMA-cxgb4-Bump-tcam_full-stat-and-WR-reply-timeout.patch
 
 	########################################################
 	# Wireless Networking
