drivers/net: delete non-required instances of include <linux/init.h> (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16390,6 +16390,7 @@
 	patches.drivers/cxgb4-0079-cxgb4-allow-large-buffer-size-to-have-page-size.patch
 	patches.drivers/cxgb4-0080-cxgb4-Changed-FW-check-version-to-match-FW-binary-ve.patch
 	patches.drivers/cxgb4-0081-cxgb4-silence-shift-wrapping-static-checker-warning.patch
+	patches.drivers/cxgb4-0082-drivers-net-delete-non-required-instances-of-include.patch
 
 	########################################################
 	# Wireless Networking
