cxgb4: Fixed the code to use correct length for part number (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16501,6 +16501,7 @@
 	patches.drivers/cxgb4-0190-cxgb4-Fix-race-condition-in-cleanup.patch
 	patches.drivers/cxgb4-0191-cxgb4-Free-completed-tx-skbs-promptly.patch
 	patches.drivers/cxgb4-0192-cxgb4-Fix-for-handling-1Gb-s-SFP-Transceiver-Modules.patch
+	patches.drivers/cxgb4-0193-cxgb4-Fixed-the-code-to-use-correct-length-for-part-.patch
 
 	########################################################
 	# Wireless Networking
