cxgb4: Fill in supported link mode for SFP modules (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16531,6 +16531,7 @@
 	patches.drivers/cxgb4-0220-cxgb4-Fix-bug-in-DCB-app-deletion.patch
 	patches.drivers/cxgb4-0221-cxgb4-dcb-open-lldp-interop-fixes.patch
 	patches.drivers/cxgb4-0222-cxgb4-Fix-DCB-priority-groups-being-returned-in-wron.patch
+	patches.drivers/cxgb4-0223-cxgb4-Fill-in-supported-link-mode-for-SFP-modules.patch
 
 	########################################################
 	# Wireless Networking
