cxgb4: Export symbols required by cxgb4i for ipv6 support and required defines (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16482,6 +16482,7 @@
 	patches.drivers/cxgb4-0171-cxgb4-iw_cxgb4-display-TPTE-on-errors.patch
 	patches.drivers/cxgb4-0172-cxgb4-iw_cxgb4-work-request-logging-feature.patch
 	patches.drivers/cxgb4-0173-cxgb4-iw_cxgb4-Move-common-defines-to-cxgb4.patch
+	patches.drivers/cxgb4-0174-cxgb4-Export-symbols-required-by-cxgb4i-for-ipv6-sup.patch
 
 	########################################################
 	# Wireless Networking
