RDMA/cxgb4: Display streaming mode error only if detected in RTS (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16322,6 +16322,7 @@
 	patches.drivers/cxgb4-0011-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/cxgb4-0012-RDMA-cxgb4-Abort-connections-that-receive-unexpected.patch
 	patches.drivers/cxgb4-0013-RDMA-cxgb4-Abort-connections-when-moving-to-ERROR-st.patch
+	patches.drivers/cxgb4-0014-RDMA-cxgb4-Display-streaming-mode-error-only-if-dete.patch
 
 	########################################################
 	# Wireless Networking
