--- a/series.conf
+++ b/series.conf
@@ -16411,6 +16411,7 @@
 	patches.drivers/cxgb4-0100-cxgb4-Add-code-to-dump-SGE-registers-when-hitting-id.patch
 	patches.drivers/cxgb4-0101-cxgb4-Rectify-emitting-messages-about-SGE-Ingress-DM.patch
 	patches.drivers/cxgb4-0102-cxgb4-Updates-for-T5-SGE-s-Egress-Congestion-Thresho.patch
+	patches.drivers/cxgb4-0103-cxgb4-Calculate-len-properly-for-LSO-path.patch
 
 	########################################################
 	# Wireless Networking
