RDMA/cxgb4: Always release neigh entry (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16417,6 +16417,7 @@
 	patches.drivers/cxgb4-0106-RDMA-cxgb4-Fix-underflows-in-c4iw_create_qp.patch
 	patches.drivers/cxgb4-0107-RDMA-cxgb4-Fix-four-byte-info-leak-in-c4iw_create_cq.patch
 	patches.drivers/cxgb4-0108-RDMA-cxgb4-Cap-CQ-size-at-T4_MAX_IQ_SIZE.patch
+	patches.drivers/cxgb4-0109-RDMA-cxgb4-Always-release-neigh-entry.patch
 
 	########################################################
 	# Wireless Networking
