RDMA/cxgb4: use WARN (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16308,6 +16308,9 @@
 	patches.drivers/mlx5-0128-net-mlx5_core-Move-to-use-hex-PCI-device-IDs.patch
 	patches.drivers/mlx5-0129-net-Mellanox-Delete-unnecessary-checks-before-the-fu.patch
 
+	# iw_cxgb4 and cxgb4 SP4 update (bsc#909577 FATE#317550)
+	patches.drivers/cxgb4-0001-RDMA-cxgb4-use-WARN.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
