--- a/series.conf
+++ b/series.conf
@@ -16437,6 +16437,7 @@
 	patches.drivers/cxgb4-0126-RDMA-cxgb4-Disable-DSGL-use-by-default.patch
 	patches.drivers/cxgb4-0127-RDMA-cxgb4-Use-the-BAR2-WC-path-for-kernel-QPs-and-T.patch
 	patches.drivers/cxgb4-0128-RDMA-cxgb4-Endpoint-timeout-fixes.patch
+	patches.drivers/cxgb4-0129-RDMA-cxgb4-rmb-after-reading-valid-gen-bit.patch
 
 	########################################################
 	# Wireless Networking
