net/cxgb4: use remove handler as shutdown handler (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16406,6 +16406,7 @@
 	patches.drivers/cxgb4-0095-cxgb4-Don-t-assume-LSO-only-uses-SGL-path-in-t4_eth_.patch
 	patches.drivers/cxgb4-0096-cxgb4-Add-more-PCI-device-ids.patch
 	patches.drivers/cxgb4-0097-cgxb4-Stop-using-ethtool-SPEED_-constants.patch
+	patches.drivers/cxgb4-0098-net-cxgb4-use-remove-handler-as-shutdown-handler.patch
 
 	########################################################
 	# Wireless Networking
