RDMA/cxgb4: Fix over-dereference when terminating (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16444,6 +16444,7 @@
 	patches.drivers/cxgb4-0133-RDMA-cxgb4-Initialize-reserved-fields-in-a-FW-work-r.patch
 	patches.drivers/cxgb4-0134-RDMA-cxgb4-Add-missing-debug-stats.patch
 	patches.drivers/cxgb4-0135-RDMA-cxgb4-Use-uninitialized_var.patch
+	patches.drivers/cxgb4-0136-RDMA-cxgb4-Fix-over-dereference-when-terminating.patch
 
 	########################################################
 	# Wireless Networking
