cxgb4 : Update copyright year on all cxgb4 files (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16464,6 +16464,7 @@
 	patches.drivers/cxgb4-0153-cxgb4-Add-DCBx-support-codebase-and-dcbnl_ops.patch
 	patches.drivers/cxgb4-0154-cxgb4-Integrate-DCBx-support-into-cxgb4-module.-Regi.patch
 	patches.drivers/cxgb4-0155-cxgb4-Makefile-Kconfig-changes-for-DCBx-support.patch
+	patches.drivers/cxgb4-0156-cxgb4-Update-copyright-year-on-all-cxgb4-files.patch
 
 	########################################################
 	# Wireless Networking
