cxgb4 : Handle dcb enable correctly (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16525,6 +16525,7 @@
 	patches.drivers/cxgb4-0214-cxgb4-Update-Kconfig-to-include-Chelsio-T5-adapter.patch
 	patches.drivers/cxgb4-0215-cxgb4-Fix-build-failure-in-cxgb4-when-ipv6-is-disabl.patch
 	patches.drivers/cxgb4-0216-cxgb4-Improve-handling-of-DCB-negotiation-or-loss-th.patch
+	patches.drivers/cxgb4-0217-cxgb4-Handle-dcb-enable-correctly.patch
 
 	########################################################
 	# Wireless Networking
