RDMA/cxgb4: Fix four byte info leak in c4iw_create_cq() (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16415,6 +16415,7 @@
 	patches.drivers/cxgb4-0104-cxgb4-iw_cxgb4-Treat-CPL_ERR_KEEPALV_NEG_ADVICE-as-n.patch
 	patches.drivers/cxgb4-0105-cxgb4-iw_cxgb4-Doorbell-Drop-Avoidance-Bug-Fixes.patch
 	patches.drivers/cxgb4-0106-RDMA-cxgb4-Fix-underflows-in-c4iw_create_qp.patch
+	patches.drivers/cxgb4-0107-RDMA-cxgb4-Fix-four-byte-info-leak-in-c4iw_create_cq.patch
 
 	########################################################
 	# Wireless Networking
