cxgb4: Add the MC1 registers to read in the interrupt handler (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16485,6 +16485,7 @@
 	patches.drivers/cxgb4-0174-cxgb4-Export-symbols-required-by-cxgb4i-for-ipv6-sup.patch
 	patches.drivers/cxgb4-0175-iw_cxgb4-fix-for-64-bit-integer-division.patch
 	patches.fixes/include-linux-math64.h-add-div64_ul.patch
+	patches.drivers/cxgb4-0177-cxgb4-Add-the-MC1-registers-to-read-in-the-interrupt.patch
 
 	########################################################
 	# Wireless Networking
