--- a/series.conf
+++ b/series.conf
@@ -16315,6 +16315,7 @@
 	patches.drivers/cxgb4-0004-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
 	patches.drivers/cxgb4-0005-cxgb4-Add-T4-filter-support.patch
 	patches.drivers/cxgb4-0006-cxgb4-Add-LE-hash-collision-bug-fix-path-in-LLD-driv.patch
+	patches.drivers/cxgb4-0007-RDMA-cxgb4-Fix-LE-hash-collision-bug-for-active-open.patch
 
 	########################################################
 	# Wireless Networking
