cxgb4: Allow T4/T5 firmware sizes up to 1MB (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16507,6 +16507,7 @@
 	patches.drivers/cxgb4-0196-cxgb4-Avoid-dumping-Write-only-registers-in-register.patch
 	patches.drivers/cxgb4-0197-cxgb4-Issue-mbox-commands-on-correct-mbox.patch
 	patches.drivers/cxgb4-0198-cxgb4-remove-bond-lock.patch
+	patches.drivers/cxgb4-0199-cxgb4-Allow-T4-T5-firmware-sizes-up-to-1MB.patch
 
 	########################################################
 	# Wireless Networking
