--- a/series.conf
+++ b/series.conf
@@ -16373,6 +16373,7 @@
 	patches.drivers/cxgb4-0062-treewide-Add-__GFP_NOWARN-to-k.alloc-calls-with-v.al.patch
 	patches.drivers/cxgb4-0063-cxgb4-remove-workqueue-when-driver-registration-fail.patch
 	patches.drivers/cxgb4-0064-net-cxgb4-remove-unnecessary-pci_set_drvdata.patch
+	patches.drivers/cxgb4-0065-cgxb4-remove-duplicate-include-in-cxgb4.h.patch
 
 	########################################################
 	# Wireless Networking
