RDMA/cxgb4: Fix onchip queue support for T5 (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16350,6 +16350,7 @@
 	patches.drivers/cxgb4-0039-RDMA-cxgb4-Use-DSGLs-for-fastreg-and-adapter-memory-.patch
 	patches.drivers/cxgb4-0040-RDMA-cxgb4-Map-pbl-buffers-for-dma-if-using-DSGL.patch
 	patches.drivers/cxgb4-0041-RDMA-cxgb4-Bump-tcam_full-stat-and-WR-reply-timeout.patch
+	patches.drivers/cxgb4-0042-RDMA-cxgb4-Fix-onchip-queue-support-for-T5.patch
 
 	########################################################
 	# Wireless Networking
