cxgb4: Fix endian bug introduced in cxgb4 dcb patchset (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16465,6 +16465,7 @@
 	patches.drivers/cxgb4-0154-cxgb4-Integrate-DCBx-support-into-cxgb4-module.-Regi.patch
 	patches.drivers/cxgb4-0155-cxgb4-Makefile-Kconfig-changes-for-DCBx-support.patch
 	patches.drivers/cxgb4-0156-cxgb4-Update-copyright-year-on-all-cxgb4-files.patch
+	patches.drivers/cxgb4-0157-cxgb4-Fix-endian-bug-introduced-in-cxgb4-dcb-patchse.patch
 
 	########################################################
 	# Wireless Networking
