--- a/series.conf
+++ b/series.conf
@@ -16513,6 +16513,7 @@
 	patches.drivers/cxgb4-0202-cxgb4-Add-warning-msg-when-attaching-to-adapters-whi.patch
 	patches.drivers/cxgb4-0203-cxgb4-cxgb4vf-Add-device-ID-for-new-adapter-and-remo.patch
 	patches.drivers/cxgb4-0204-cxgb4-Don-t-allocate-adapter-structure-for-all-PF-s.patch
+	patches.drivers/cxgb4-0205-cxgb4-Use-BAR2-Going-To-Sleep-GTS-for-T5-and-later.patch
 
 	########################################################
 	# Wireless Networking
