cxgb4: Add warning msg when attaching to adapters which have FLASHes smaller than 2Mb (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16510,6 +16510,7 @@
 	patches.drivers/cxgb4-0199-cxgb4-Allow-T4-T5-firmware-sizes-up-to-1MB.patch
 	patches.drivers/cxgb4-0200-cxgb4-Add-support-to-S25FL032P-flash.patch
 	patches.drivers/cxgb4-0201-cxgb4-Fix-t4_flash_erase_sectors-to-throw-an-error-w.patch
+	patches.drivers/cxgb4-0202-cxgb4-Add-warning-msg-when-attaching-to-adapters-whi.patch
 
 	########################################################
 	# Wireless Networking
