RDMA/cxgb4: Fix memory leaks in c4iw_alloc() error paths (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16455,6 +16455,7 @@
 	patches.drivers/cxgb4-0144-cxgb4-Decode-the-firmware-port-and-module-type-a-bit.patch
 	patches.drivers/cxgb4-0145-cxgb4-Check-if-rx-checksum-offload-is-enabled-while-.patch
 	patches.drivers/cxgb4-0146-net-get-rid-of-SET_ETHTOOL_OPS.patch
+	patches.drivers/cxgb4-0147-RDMA-cxgb4-Fix-memory-leaks-in-c4iw_alloc-error-path.patch
 
 	########################################################
 	# Wireless Networking
