RDMA/cxgb4: Fix gcc warning on 32-bit arch (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16391,6 +16391,7 @@
 	patches.drivers/cxgb4-0080-cxgb4-Changed-FW-check-version-to-match-FW-binary-ve.patch
 	patches.drivers/cxgb4-0081-cxgb4-silence-shift-wrapping-static-checker-warning.patch
 	patches.drivers/cxgb4-0082-drivers-net-delete-non-required-instances-of-include.patch
+	patches.drivers/cxgb4-0083-RDMA-cxgb4-Fix-gcc-warning-on-32-bit-arch.patch
 
 	########################################################
 	# Wireless Networking
