cxgb4: Force uninitialized state if FW_ON_ADAPTER is < FW_VERSION and we're the MASTER_PF (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16356,6 +16356,7 @@
 	patches.drivers/cxgb4-0045-cxgb4-Fix-pci_device_id-structure-initialization-wit.patch
 	patches.drivers/cxgb4-0046-cxgb4-Support-CPL_SGE_EGR_UPDATEs-encapsulated-in-a-.patch
 	patches.drivers/cxgb4-0047-cxgb4vf-Support-CPL_SGE_EGR_UPDATEs-encapsulated-in-.patch
+	patches.drivers/cxgb4-0048-cxgb4-Force-uninitialized-state-if-FW_ON_ADAPTER-is-.patch
 
 	########################################################
 	# Wireless Networking
