--- a/series.conf
+++ b/series.conf
@@ -16392,6 +16392,7 @@
 	patches.drivers/cxgb4-0081-cxgb4-silence-shift-wrapping-static-checker-warning.patch
 	patches.drivers/cxgb4-0082-drivers-net-delete-non-required-instances-of-include.patch
 	patches.drivers/cxgb4-0083-RDMA-cxgb4-Fix-gcc-warning-on-32-bit-arch.patch
+	patches.drivers/cxgb4-0084-net-cxgb4-Avoid-disabling-PCI-device-for-towice.patch
 
 	########################################################
 	# Wireless Networking
