cxgb4: Use pci_enable_msix_range() instead of pci_enable_msix() (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16396,6 +16396,7 @@
 	patches.drivers/cxgb4-0085-net-cxgb4-Don-t-retrieve-stats-during-recovery.patch
 	patches.drivers/cxgb4-0086-net-cxgb4-Fix-referencing-freed-adapter.patch
 	patches.drivers/cxgb4-0087-RDMA-cxgb4-Add-missing-neigh_release-in-LE-Workaroun.patch
+	patches.drivers/cxgb4-0088-cxgb4-Use-pci_enable_msix_range-instead-of-pci_enabl.patch
 
 	########################################################
 	# Wireless Networking
