cxgb4: Free completed tx skbs promptly (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16499,6 +16499,7 @@
 	patches.drivers/cxgb4-0188-cxgb4-IEEE-fixes-for-DCBx-state-machine.patch
 	patches.drivers/cxgb4-0189-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/cxgb4-0190-cxgb4-Fix-race-condition-in-cleanup.patch
+	patches.drivers/cxgb4-0191-cxgb4-Free-completed-tx-skbs-promptly.patch
 
 	########################################################
 	# Wireless Networking
