--- a/series.conf
+++ b/series.conf
@@ -16409,6 +16409,7 @@
 	patches.drivers/cxgb4-0098-net-cxgb4-use-remove-handler-as-shutdown-handler.patch
 	patches.drivers/cxgb4-0099-cxgb4-Fix-some-small-bugs-in-t4_sge_init_soft-when-o.patch
 	patches.drivers/cxgb4-0100-cxgb4-Add-code-to-dump-SGE-registers-when-hitting-id.patch
+	patches.drivers/cxgb4-0101-cxgb4-Rectify-emitting-messages-about-SGE-Ingress-DM.patch
 
 	########################################################
 	# Wireless Networking
