--- a/series.conf
+++ b/series.conf
@@ -16403,6 +16403,7 @@
 	patches.drivers/cxgb4-0092-cxgb4-LE-Workaround-is-not-atomic-in-firmware.patch
 	patches.drivers/cxgb4-0093-cxgb4-Query-firmware-for-T5-ULPTX-MEMWRITE-DSGL-capa.patch
 	patches.drivers/cxgb4-0094-cxgb4-Remove-unused-registers-and-add-missing-ones.patch
+	patches.drivers/cxgb4-0095-cxgb4-Don-t-assume-LSO-only-uses-SGL-path-in-t4_eth_.patch
 
 	########################################################
 	# Wireless Networking
