--- a/series.conf
+++ b/series.conf
@@ -16321,6 +16321,7 @@
 	patches.drivers/cxgb4-0010-chelsio-Use-netdev_-level-and-pr_-level.patch
 	patches.drivers/cxgb4-0011-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/cxgb4-0012-RDMA-cxgb4-Abort-connections-that-receive-unexpected.patch
+	patches.drivers/cxgb4-0013-RDMA-cxgb4-Abort-connections-when-moving-to-ERROR-st.patch
 
 	########################################################
 	# Wireless Networking
