--- a/series.conf
+++ b/series.conf
@@ -16508,6 +16508,7 @@
 	patches.drivers/cxgb4-0197-cxgb4-Issue-mbox-commands-on-correct-mbox.patch
 	patches.drivers/cxgb4-0198-cxgb4-remove-bond-lock.patch
 	patches.drivers/cxgb4-0199-cxgb4-Allow-T4-T5-firmware-sizes-up-to-1MB.patch
+	patches.drivers/cxgb4-0200-cxgb4-Add-support-to-S25FL032P-flash.patch
 
 	########################################################
 	# Wireless Networking
