--- a/series.conf
+++ b/series.conf
@@ -16385,6 +16385,7 @@
 	patches.drivers/cxgb4-0074-cxgb4-Assign-filter-server-TIDs-properly.patch
 	patches.drivers/cxgb4-0075-cxgb4-Account-for-stid-entries-properly-in-case-of-I.patch
 	patches.drivers/cxgb4-0076-cxgb4-Add-API-to-correctly-calculate-tuple-fields.patch
+	patches.drivers/cxgb4-0077-RDMA-cxgb4-Calculate-the-filter-server-TID-properly.patch
 
 	########################################################
 	# Wireless Networking
