--- a/series.conf
+++ b/series.conf
@@ -16519,6 +16519,7 @@
 	patches.drivers/cxgb4-0208-cxgb4-potential-shift-wrapping-bug.patch
 	patches.drivers/cxgb4-0209-cxgb4-clean-up-a-type-issue.patch
 	patches.drivers/cxgb4-0210-cxgb4-cxgb4vf-Updated-the-LSO-transfer-length-in-CPL.patch
+	patches.drivers/cxgb4-0211-cxgb4-Wait-for-device-to-get-ready-before-reading-an.patch
 
 	########################################################
 	# Wireless Networking
