cxgb4: Update Kconfig to include Chelsio T5 adapter (bsc#909577 FATE#317550).

--- a/series.conf
+++ b/series.conf
@@ -16522,6 +16522,7 @@
 	patches.drivers/cxgb4-0211-cxgb4-Wait-for-device-to-get-ready-before-reading-an.patch
 	patches.drivers/cxgb4-0212-RDMA-cxgb4-Make-c4iw_wr_log_size_order-static.patch
 	patches.drivers/cxgb4-0213-cxgb4-Fix-FW-flash-logic-using-ethtool.patch
+	patches.drivers/cxgb4-0214-cxgb4-Update-Kconfig-to-include-Chelsio-T5-adapter.patch
 
 	########################################################
 	# Wireless Networking
