--- a/series.conf
+++ b/series.conf
@@ -16397,6 +16397,7 @@
 	patches.drivers/cxgb4-0086-net-cxgb4-Fix-referencing-freed-adapter.patch
 	patches.drivers/cxgb4-0087-RDMA-cxgb4-Add-missing-neigh_release-in-LE-Workaroun.patch
 	patches.drivers/cxgb4-0088-cxgb4-Use-pci_enable_msix_range-instead-of-pci_enabl.patch
+	patches.drivers/cxgb4-0089-cxgb4-Add-support-to-recognize-40G-links.patch
 
 	########################################################
 	# Wireless Networking
