--- a/series.conf
+++ b/series.conf
@@ -14902,6 +14902,7 @@
 	patches.fixes/dm-mpath-fix-race-condition-between-multipath_dtr-an.patch
 	patches.fixes/dm-mpath-fix-panic-on-deleting-sg-device.patch
 	patches.fixes/dm-raid-add-support-for-region-size-bnc895841.patch
+	patches.fixes/0001-dm-optimize-use-SRCU-and-RCU.patch
 
 	########################################################
 	# md
