xfs: factor extent map manipulations out of xfs_bmapi (bnc#891641).

--- a/series.conf
+++ b/series.conf
@@ -3833,6 +3833,8 @@
 	patches.fixes/xfs-fix-cil-push-sequence-after-log-recovery
 	patches.fixes/xfs-remove-log-force-from-xfs_buf_trylock.patch
 	patches.fixes/xfs-recheck-buffer-pinned-status-after-push-trylock-.patch
+	#bnc 891641
+	patches.fixes/0005-xfs-factor-extent-map-manipulations-out-of-xfs_bmapi.patch
 
 	########################################################
 	# ceph backport from 3.5-rc1
@@ -15019,6 +15021,7 @@
 	patches.fixes/md-fix-up-plugging-again.patch
 	patches.fixes/md-strange-spin.fix
 	patches.fixes/md-raid6-avoid-data-corruption-during-recovery-of-do.patch
+	#bnc 891641
 
 	##########################################################
 	#
