xfs: introduce xfs_bmapi_read() (bnc#891641).

--- a/series.conf
+++ b/series.conf
@@ -3835,6 +3835,7 @@
 	patches.fixes/xfs-recheck-buffer-pinned-status-after-push-trylock-.patch
 	#bnc 891641
 	patches.fixes/0005-xfs-factor-extent-map-manipulations-out-of-xfs_bmapi.patch
+	patches.fixes/0006-xfs-introduce-xfs_bmapi_read.patch
 
 	########################################################
 	# ceph backport from 3.5-rc1
