md: don't wait for plug_cnt to go to zero (bnc#891641).

--- a/series.conf
+++ b/series.conf
@@ -15023,6 +15023,7 @@
 	patches.fixes/md-strange-spin.fix
 	patches.fixes/md-raid6-avoid-data-corruption-during-recovery-of-do.patch
 	#bnc 891641
+	patches.fixes/0001-md-plug_cnt.fix
 
 	##########################################################
 	#
