cxfb4vf: Call dev_kfree/consume_skb_any instead of [dev_]kfree_skb (bsc#909580 FATE#317556).

--- a/series.conf
+++ b/series.conf
@@ -16549,6 +16549,7 @@
 	patches.drivers/cxgb4vf-0013-cxgb4-make-functions-static-and-remove-dead-code.patch
 	patches.drivers/cxgb4vf-0014-cxgb4vf-Remove-superfluous-call-to-pci_disable_msix.patch
 	patches.drivers/cxgb4vf-0015-cxgb4vf-Use-pci_enable_msix_range-instead-of-pci_ena.patch
+	patches.drivers/cxgb4vf-0016-cxfb4vf-Call-dev_kfree-consume_skb_any-instead-of-de.patch
 
 	########################################################
 	# Wireless Networking
