cxgb4vf: Remove superfluous "idx" parameter of CH_DEVICE() macro (bsc#909580 FATE#317556).

--- a/series.conf
+++ b/series.conf
@@ -16558,6 +16558,7 @@
 	patches.drivers/cxgb4vf-0022-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/cxgb4vf-0023-cxgb4-Free-completed-tx-skbs-promptly.patch
 	patches.drivers/cxgb4vf-0024-cxgb4-cxgb4vf-Add-device-ID-for-new-adapter-and-remo.patch
+	patches.drivers/cxgb4vf-0025-cxgb4vf-Remove-superfluous-idx-parameter-of-CH_DEVIC.patch
 
 	########################################################
 	# Wireless Networking
