--- a/series.conf
+++ b/series.conf
@@ -16547,6 +16547,7 @@
 	patches.drivers/cxgb4vf-0011-net-cxgb4vf-use-DEFINE_PCI_DEVICE_TABLE.patch
 	patches.drivers/cxgb4vf-0012-cxgb4vf-added-much-cleaner-implementation-of-is_t4.patch
 	patches.drivers/cxgb4vf-0013-cxgb4-make-functions-static-and-remove-dead-code.patch
+	patches.drivers/cxgb4vf-0014-cxgb4vf-Remove-superfluous-call-to-pci_disable_msix.patch
 
 	########################################################
 	# Wireless Networking
