remove init of dev->perm_addr in drivers (bsc#909580 FATE#317556).

--- a/series.conf
+++ b/series.conf
@@ -16538,6 +16538,7 @@
 	patches.drivers/cxgb4vf-0002-cxgb4vf-remove-__dev-attributes.patch
 	patches.drivers/cxgb4vf-0003-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
 	patches.drivers/cxgb4vf-0004-chelsio-Use-netdev_-level-and-pr_-level.patch
+	patches.drivers/cxgb4vf-0005-remove-init-of-dev-perm_addr-in-drivers.patch
 
 	########################################################
 	# Wireless Networking
