cxgb4/cxgb4vf: For T5 use Packing and Padding Boundaries for SGE DMA transfers (bsc#909580 FATE#317556).

--- a/series.conf
+++ b/series.conf
@@ -16564,6 +16564,7 @@
 	patches.drivers/cxgb4vf-0028-cxgb4vf-Add-40G-support-for-cxgb4vf-driver.patch
 	patches.drivers/cxgb4vf-0029-cxgb4vf-Replace-repetitive-pci-device-ID-s-with-righ.patch
 	patches.drivers/cxgb4vf-0030-cxgb4vf-Move-fl_starv_thres-into-adapter-sge-data-st.patch
+	patches.drivers/cxgb4vf-0031-cxgb4-cxgb4vf-For-T5-use-Packing-and-Padding-Boundar.patch
 
 	########################################################
 	# Wireless Networking
