cxgb4vf: Adds device ID for few more Chelsio T4 Adapters (bsc#909580 FATE#317556).

--- a/series.conf
+++ b/series.conf
@@ -16553,6 +16553,7 @@
 	patches.drivers/cxgb4vf-0017-cxgb4vf-Adds-device-Id-for-few-more-Chelsio-adapters.patch
 	patches.drivers/cxgb4vf-0018-cxgb4vf-Check-if-rx-checksum-offload-is-enabled-whil.patch
 	patches.drivers/cxgb4vf-0019-net-get-rid-of-SET_ETHTOOL_OPS.patch
+	patches.drivers/cxgb4vf-0020-cxgb4vf-Adds-device-ID-for-few-more-Chelsio-T4-Adapt.patch
 
 	########################################################
 	# Wireless Networking
