--- a/series.conf
+++ b/series.conf
@@ -16562,6 +16562,7 @@
 	patches.drivers/cxgb4vf-0026-cxgb4-cxgb4vf-Add-Devicde-ID-for-two-more-adapter.patch
 	patches.drivers/cxgb4vf-0027-cxgb4-cxgb4vf-Updated-the-LSO-transfer-length-in-CPL.patch
 	patches.drivers/cxgb4vf-0028-cxgb4vf-Add-40G-support-for-cxgb4vf-driver.patch
+	patches.drivers/cxgb4vf-0029-cxgb4vf-Replace-repetitive-pci-device-ID-s-with-righ.patch
 
 	########################################################
 	# Wireless Networking
