cxgb4vf: Turn off SGE RX/TX Callback Timers and interrupts in PCI shutdown routine (bsc#909580 FATE#317556).

--- a/series.conf
+++ b/series.conf
@@ -16554,6 +16554,7 @@
 	patches.drivers/cxgb4vf-0018-cxgb4vf-Check-if-rx-checksum-offload-is-enabled-whil.patch
 	patches.drivers/cxgb4vf-0019-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/cxgb4vf-0020-cxgb4vf-Adds-device-ID-for-few-more-Chelsio-T4-Adapt.patch
+	patches.drivers/cxgb4vf-0021-cxgb4vf-Turn-off-SGE-RX-TX-Callback-Timers-and-inter.patch
 
 	########################################################
 	# Wireless Networking
