--- a/series.conf
+++ b/series.conf
@@ -16539,6 +16539,7 @@
 	patches.drivers/cxgb4vf-0003-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
 	patches.drivers/cxgb4vf-0004-chelsio-Use-netdev_-level-and-pr_-level.patch
 	patches.drivers/cxgb4vf-0005-remove-init-of-dev-perm_addr-in-drivers.patch
+	patches.drivers/cxgb4vf-0006-cxgb4vf-Fix-VLAN-extraction-counter-increment.patch
 
 	########################################################
 	# Wireless Networking
