cxgb4vf: Support CPL_SGE_EGR_UPDATEs encapsulated in a CPL_FW4_MSG (bsc#909580 FATE#317556).

--- a/series.conf
+++ b/series.conf
@@ -16541,6 +16541,7 @@
 	patches.drivers/cxgb4vf-0005-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/cxgb4vf-0006-cxgb4vf-Fix-VLAN-extraction-counter-increment.patch
 	patches.drivers/cxgb4vf-0007-cxgb4vf-Add-support-for-Chelsio-T5-adapter.patch
+	patches.drivers/cxgb4vf-0008-cxgb4vf-Support-CPL_SGE_EGR_UPDATEs-encapsulated-in-.patch
 
 	########################################################
 	# Wireless Networking
