--- a/series.conf
+++ b/series.conf
@@ -16545,6 +16545,7 @@
 	patches.drivers/cxgb4vf-0009-net-cxgb4vf-Staticize-local-symbols.patch
 	patches.drivers/cxgb4vf-0010-net-cxgb4vf-remove-unnecessary-pci_set_drvdata.patch
 	patches.drivers/cxgb4vf-0011-net-cxgb4vf-use-DEFINE_PCI_DEVICE_TABLE.patch
+	patches.drivers/cxgb4vf-0012-cxgb4vf-added-much-cleaner-implementation-of-is_t4.patch
 
 	########################################################
 	# Wireless Networking
