--- a/series.conf
+++ b/series.conf
@@ -16555,6 +16555,7 @@
 	patches.drivers/cxgb4vf-0019-net-get-rid-of-SET_ETHTOOL_OPS.patch
 	patches.drivers/cxgb4vf-0020-cxgb4vf-Adds-device-ID-for-few-more-Chelsio-T4-Adapt.patch
 	patches.drivers/cxgb4vf-0021-cxgb4vf-Turn-off-SGE-RX-TX-Callback-Timers-and-inter.patch
+	patches.drivers/cxgb4vf-0022-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 
 	########################################################
 	# Wireless Networking
