net: get rid of SET_ETHTOOL_OPS (bsc#909580 FATE#317556).

--- a/series.conf
+++ b/series.conf
@@ -16552,6 +16552,7 @@
 	patches.drivers/cxgb4vf-0016-cxfb4vf-Call-dev_kfree-consume_skb_any-instead-of-de.patch
 	patches.drivers/cxgb4vf-0017-cxgb4vf-Adds-device-Id-for-few-more-Chelsio-adapters.patch
 	patches.drivers/cxgb4vf-0018-cxgb4vf-Check-if-rx-checksum-offload-is-enabled-whil.patch
+	patches.drivers/cxgb4vf-0019-net-get-rid-of-SET_ETHTOOL_OPS.patch
 
 	########################################################
 	# Wireless Networking
