--- a/series.conf
+++ b/series.conf
@@ -16536,6 +16536,7 @@
 	# cxgb4vf SP4 update (bsc#909580 FATE#317556)
 	patches.drivers/cxgb4vf-0001-SCSI-cxgb4-cxgb4vf-Chelsio-FCoE-offload-driver-submi.patch
 	patches.drivers/cxgb4vf-0002-cxgb4vf-remove-__dev-attributes.patch
+	patches.drivers/cxgb4vf-0003-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
 
 	########################################################
 	# Wireless Networking
