--- a/series.conf
+++ b/series.conf
@@ -16560,6 +16560,7 @@
 	patches.drivers/cxgb4vf-0024-cxgb4-cxgb4vf-Add-device-ID-for-new-adapter-and-remo.patch
 	patches.drivers/cxgb4vf-0025-cxgb4vf-Remove-superfluous-idx-parameter-of-CH_DEVIC.patch
 	patches.drivers/cxgb4vf-0026-cxgb4-cxgb4vf-Add-Devicde-ID-for-two-more-adapter.patch
+	patches.drivers/cxgb4vf-0027-cxgb4-cxgb4vf-Updated-the-LSO-transfer-length-in-CPL.patch
 
 	########################################################
 	# Wireless Networking
