cxgb4: Free completed tx skbs promptly (bsc#909580 FATE#317556).

--- a/series.conf
+++ b/series.conf
@@ -16556,6 +16556,7 @@
 	patches.drivers/cxgb4vf-0020-cxgb4vf-Adds-device-ID-for-few-more-Chelsio-T4-Adapt.patch
 	patches.drivers/cxgb4vf-0021-cxgb4vf-Turn-off-SGE-RX-TX-Callback-Timers-and-inter.patch
 	patches.drivers/cxgb4vf-0022-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
+	patches.drivers/cxgb4vf-0023-cxgb4-Free-completed-tx-skbs-promptly.patch
 
 	########################################################
 	# Wireless Networking
