net: cxgb4vf: use DEFINE_PCI_DEVICE_TABLE (bsc#909580 FATE#317556).

--- a/series.conf
+++ b/series.conf
@@ -16544,6 +16544,7 @@
 	patches.drivers/cxgb4vf-0008-cxgb4vf-Support-CPL_SGE_EGR_UPDATEs-encapsulated-in-.patch
 	patches.drivers/cxgb4vf-0009-net-cxgb4vf-Staticize-local-symbols.patch
 	patches.drivers/cxgb4vf-0010-net-cxgb4vf-remove-unnecessary-pci_set_drvdata.patch
+	patches.drivers/cxgb4vf-0011-net-cxgb4vf-use-DEFINE_PCI_DEVICE_TABLE.patch
 
 	########################################################
 	# Wireless Networking
