--- a/series.conf
+++ b/series.conf
@@ -16548,6 +16548,7 @@
 	patches.drivers/cxgb4vf-0012-cxgb4vf-added-much-cleaner-implementation-of-is_t4.patch
 	patches.drivers/cxgb4vf-0013-cxgb4-make-functions-static-and-remove-dead-code.patch
 	patches.drivers/cxgb4vf-0014-cxgb4vf-Remove-superfluous-call-to-pci_disable_msix.patch
+	patches.drivers/cxgb4vf-0015-cxgb4vf-Use-pci_enable_msix_range-instead-of-pci_ena.patch
 
 	########################################################
 	# Wireless Networking
