--- a/series.conf
+++ b/series.conf
@@ -16550,6 +16550,7 @@
 	patches.drivers/cxgb4vf-0014-cxgb4vf-Remove-superfluous-call-to-pci_disable_msix.patch
 	patches.drivers/cxgb4vf-0015-cxgb4vf-Use-pci_enable_msix_range-instead-of-pci_ena.patch
 	patches.drivers/cxgb4vf-0016-cxfb4vf-Call-dev_kfree-consume_skb_any-instead-of-de.patch
+	patches.drivers/cxgb4vf-0017-cxgb4vf-Adds-device-Id-for-few-more-Chelsio-adapters.patch
 
 	########################################################
 	# Wireless Networking
