cxgb4vf: FL Starvation Threshold needs to be larger than the SGE's Egress Congestion Threshold (bsc#909580 FATE#317556).

--- a/series.conf
+++ b/series.conf
@@ -16565,6 +16565,7 @@
 	patches.drivers/cxgb4vf-0029-cxgb4vf-Replace-repetitive-pci-device-ID-s-with-righ.patch
 	patches.drivers/cxgb4vf-0030-cxgb4vf-Move-fl_starv_thres-into-adapter-sge-data-st.patch
 	patches.drivers/cxgb4vf-0031-cxgb4-cxgb4vf-For-T5-use-Packing-and-Padding-Boundar.patch
+	patches.drivers/cxgb4vf-0032-cxgb4vf-FL-Starvation-Threshold-needs-to-be-larger-t.patch
 
 	########################################################
 	# Wireless Networking
