[SCSI] cxgb4/cxgb4vf: Chelsio FCoE offload driver submission (common header updates) (bsc#909580 FATE#317556).

--- a/series.conf
+++ b/series.conf
@@ -16533,6 +16533,9 @@
 	patches.drivers/cxgb4-0222-cxgb4-Fix-DCB-priority-groups-being-returned-in-wron.patch
 	patches.drivers/cxgb4-0223-cxgb4-Fill-in-supported-link-mode-for-SFP-modules.patch
 
+	# cxgb4vf SP4 update (bsc#909580 FATE#317556)
+	patches.drivers/cxgb4vf-0001-SCSI-cxgb4-cxgb4vf-Chelsio-FCoE-offload-driver-submi.patch
+
 	########################################################
 	# Wireless Networking
 	########################################################
