cxgb4vf: Check if rx checksum offload is enabled, while reading hardware calculated checksum (bsc#909580 FATE#317556).

--- a/series.conf
+++ b/series.conf
@@ -16551,6 +16551,7 @@
 	patches.drivers/cxgb4vf-0015-cxgb4vf-Use-pci_enable_msix_range-instead-of-pci_ena.patch
 	patches.drivers/cxgb4vf-0016-cxfb4vf-Call-dev_kfree-consume_skb_any-instead-of-de.patch
 	patches.drivers/cxgb4vf-0017-cxgb4vf-Adds-device-Id-for-few-more-Chelsio-adapters.patch
+	patches.drivers/cxgb4vf-0018-cxgb4vf-Check-if-rx-checksum-offload-is-enabled-whil.patch
 
 	########################################################
 	# Wireless Networking
