--- a/series.conf
+++ b/series.conf
@@ -16542,6 +16542,7 @@
 	patches.drivers/cxgb4vf-0006-cxgb4vf-Fix-VLAN-extraction-counter-increment.patch
 	patches.drivers/cxgb4vf-0007-cxgb4vf-Add-support-for-Chelsio-T5-adapter.patch
 	patches.drivers/cxgb4vf-0008-cxgb4vf-Support-CPL_SGE_EGR_UPDATEs-encapsulated-in-.patch
+	patches.drivers/cxgb4vf-0009-net-cxgb4vf-Staticize-local-symbols.patch
 
 	########################################################
 	# Wireless Networking
