--- a/series.conf
+++ b/series.conf
@@ -16540,6 +16540,7 @@
 	patches.drivers/cxgb4vf-0004-chelsio-Use-netdev_-level-and-pr_-level.patch
 	patches.drivers/cxgb4vf-0005-remove-init-of-dev-perm_addr-in-drivers.patch
 	patches.drivers/cxgb4vf-0006-cxgb4vf-Fix-VLAN-extraction-counter-increment.patch
+	patches.drivers/cxgb4vf-0007-cxgb4vf-Add-support-for-Chelsio-T5-adapter.patch
 
 	########################################################
 	# Wireless Networking
