--- a/series.conf
+++ b/series.conf
@@ -16557,6 +16557,7 @@
 	patches.drivers/cxgb4vf-0021-cxgb4vf-Turn-off-SGE-RX-TX-Callback-Timers-and-inter.patch
 	patches.drivers/cxgb4vf-0022-PCI-Remove-DEFINE_PCI_DEVICE_TABLE-macro-use.patch
 	patches.drivers/cxgb4vf-0023-cxgb4-Free-completed-tx-skbs-promptly.patch
+	patches.drivers/cxgb4vf-0024-cxgb4-cxgb4vf-Add-device-ID-for-new-adapter-and-remo.patch
 
 	########################################################
 	# Wireless Networking
