--- a/series.conf
+++ b/series.conf
@@ -16559,6 +16559,7 @@
 	patches.drivers/cxgb4vf-0023-cxgb4-Free-completed-tx-skbs-promptly.patch
 	patches.drivers/cxgb4vf-0024-cxgb4-cxgb4vf-Add-device-ID-for-new-adapter-and-remo.patch
 	patches.drivers/cxgb4vf-0025-cxgb4vf-Remove-superfluous-idx-parameter-of-CH_DEVIC.patch
+	patches.drivers/cxgb4vf-0026-cxgb4-cxgb4vf-Add-Devicde-ID-for-two-more-adapter.patch
 
 	########################################################
 	# Wireless Networking
