--- a/series.conf
+++ b/series.conf
@@ -16543,6 +16543,7 @@
 	patches.drivers/cxgb4vf-0007-cxgb4vf-Add-support-for-Chelsio-T5-adapter.patch
 	patches.drivers/cxgb4vf-0008-cxgb4vf-Support-CPL_SGE_EGR_UPDATEs-encapsulated-in-.patch
 	patches.drivers/cxgb4vf-0009-net-cxgb4vf-Staticize-local-symbols.patch
+	patches.drivers/cxgb4vf-0010-net-cxgb4vf-remove-unnecessary-pci_set_drvdata.patch
 
 	########################################################
 	# Wireless Networking
