cxgb4vf: Add 40G support for cxgb4vf driver (bsc#909580 FATE#317556).

--- a/series.conf
+++ b/series.conf
@@ -16561,6 +16561,7 @@
 	patches.drivers/cxgb4vf-0025-cxgb4vf-Remove-superfluous-idx-parameter-of-CH_DEVIC.patch
 	patches.drivers/cxgb4vf-0026-cxgb4-cxgb4vf-Add-Devicde-ID-for-two-more-adapter.patch
 	patches.drivers/cxgb4vf-0027-cxgb4-cxgb4vf-Updated-the-LSO-transfer-length-in-CPL.patch
+	patches.drivers/cxgb4vf-0028-cxgb4vf-Add-40G-support-for-cxgb4vf-driver.patch
 
 	########################################################
 	# Wireless Networking
