--- a/series.conf
+++ b/series.conf
@@ -16537,6 +16537,7 @@
 	patches.drivers/cxgb4vf-0001-SCSI-cxgb4-cxgb4vf-Chelsio-FCoE-offload-driver-submi.patch
 	patches.drivers/cxgb4vf-0002-cxgb4vf-remove-__dev-attributes.patch
 	patches.drivers/cxgb4vf-0003-drivers-net-fix-up-function-prototypes-after-__dev-r.patch
+	patches.drivers/cxgb4vf-0004-chelsio-Use-netdev_-level-and-pr_-level.patch
 
 	########################################################
 	# Wireless Networking
